syntax = "proto3";

package chef.automate.api.nodes.v1;
option go_package = "github.com/chef/automate/components/automate-gateway/api/nodes";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

// for option (chef.automate.api.policy)
import "components/automate-grpc/protoc-gen-policy/api/annotations.proto";
// for option (chef.automate.api.iam.policy)
import "components/automate-grpc/protoc-gen-policy/iam/annotations.proto";

import "components/compliance-service/api/common/common.proto";

service NodesService {
	/*
	Create a node

	Creates a node and adds it to the "Automate" node manager.
	Requires a FQDN or IP address, a user-specified name, and a ssh or winrm credential reference.
	Useful for creating nodes for the purpose of running compliance scan jobs.
	*/
	rpc Create(Node) returns (Id) {
		option (google.api.http) = {
			post: "/nodes"
			body: "*"
		};
		option (chef.automate.api.policy) = {
			resource: "nodes"
			action: "create"
		};
		option (chef.automate.api.iam.policy) = {
			resource: "infra:nodes"
			action: "infra:nodes:create"
		};
	};

	/*
	Read a node

	Returns the details for a node given the node id.
	*/
	rpc Read(Id) returns (Node) {
		option (google.api.http) = {
			get: "/nodes/id/{id}"
		};
		option (chef.automate.api.policy) = {
			resource: "nodes:{id}"
			action: "read"
		};
		option (chef.automate.api.iam.policy) = {
			resource: "infra:nodes:{id}"
			action: "infra:nodes:get"
		};
	};

	/*
	Update a node

	Updates node information, such as the name, FQDN, tags, or associated credentials.
	Please note that this is a PUT operation, so all node details included in the create function
	should be included in the PUT message to update.
	*/
	rpc Update(Node) returns (google.protobuf.Empty) {
		option (google.api.http) = {
			put: "/nodes/id/{id}"
			body: "*"
		};
		option (chef.automate.api.policy) = {
			resource: "nodes:{id}"
			action: "update"
		};
		option (chef.automate.api.iam.policy) = {
			resource: "infra:nodes:{id}"
			action: "infra:nodes:update"
		};
	};

	/*
	Delete a node

	Deletes the node with the node id.
	*/
	rpc Delete(Id) returns (google.protobuf.Empty) {
		option (google.api.http) = {
			delete: "/nodes/id/{id}"
		};
		option (chef.automate.api.policy) = {
			resource: "nodes:{id}"
			action: "delete"
		};
		option (chef.automate.api.iam.policy) = {
			resource: "infra:nodes:{id}"
			action: "infra:nodes:delete"
		};
	};

	/*
	Bulk delete by id

	Deletes a set of nodes that match a list of ids.
	*/
	rpc BulkDeleteById(Ids) returns (BulkDeleteResponse) {
		option (google.api.http) = {
			post: "/nodes/delete/ids"
			body: "*"
		};
		option (chef.automate.api.policy) = {
			resource: "nodes"
			action: "delete"
		};
		option (chef.automate.api.iam.policy) = {
			resource: "infra:nodes"
			action: "infra:nodes:delete"
		};
	};

	/*
	List nodes

	Makes a list of nodes. 
	Supports filtering, pagination, and sorting.
	Adding a filter makes a list of nodes that meet the filter criteria.
	Supported filters are: 
	account_id, last_contact, manager_id, manager_type, name, platform_name,
	platform_release, region, source_id, state, statechange_timerange, status,
	last_run_timerange, last_scan_timerange, last_run_status, last_scan_status,
	last_run_penultimate_status, last_scan_penultimate_status
	*/
	rpc List(Query) returns (Nodes) {
		option (google.api.http) = {
			post: "/nodes/search"
			body: "*"
		};
		option (chef.automate.api.policy) = {
			resource: "nodes"
			action: "list"
		};
		option (chef.automate.api.iam.policy) = {
			resource: "infra:nodes"
			action: "infra:nodes:list"
		};
	};

	/*
	Rerun a node

	Runs an `inspec detect` job on the node and updates the status to reflect
	the status of the node accordingly (reachable or unreachable).
	*/
	rpc Rerun(Id) returns (RerunResponse) {
		option (google.api.http) = {
			get: "/nodes/rerun/id/{id}"
		};
		option (chef.automate.api.policy) = {
			resource: "nodes:{id}"
			action: "rerun"
		};
		option (chef.automate.api.iam.policy) = {
			resource: "infra:nodes:{id}"
			action: "infra:nodes:rerun"
		};
	};

	/*
	Bulk delete

	Deletes a set of nodes that match a filter. 
		account_id, last_contact, manager_id, manager_type, name, platform_name,
	platform_release, region, source_id, state, statechange_timerange, status,
	last_run_timerange, last_scan_timerange, last_run_status, last_scan_status,
	last_run_penultimate_status, last_scan_penultimate_status
	*/
	rpc BulkDelete(Query) returns (BulkDeleteResponse) {
		option (google.api.http) = {
			post: "/nodes/delete"
			body: "*"
		};
		option (chef.automate.api.policy) = {
			resource: "nodes"
			action: "delete"
		};
		option (chef.automate.api.iam.policy) = {
			resource: "infra:nodes"
			action: "infra:nodes:delete"
		};
	};

	/*
	Bulk create nodes

	Creates multiple nodes from a list of node data.
	*/
	rpc BulkCreate(Nodes) returns (Ids) {
		option (google.api.http) = {
			post: "/nodes/bulk-create"
			body: "*"
		};
		option (chef.automate.api.policy) = {
			resource: "nodes"
			action: "create"
		};
		option (chef.automate.api.iam.policy) = {
			resource: "infra:nodes"
			action: "infra:nodes:create"
		};
	};

}

message Id {
	// Unique node id (UUID)
	string id = 1;
}

message Ids {
	// List of node UUIDs.
	repeated string ids = 1;
}

message RerunResponse {}

message Query {
	// Filters to be applied to the query.
	repeated chef.automate.domain.compliance.api.common.Filter filters = 20;
	enum OrderType {
		ASC = 0;
		DESC = 1;
	}
	// Return the results in ascending or descending order.
	OrderType order = 21;
	// Sort the results on a specific field.
	string sort = 22;
	// The number of result pages to return.
	int32 page = 23;
	// The number of results on each page.
	int32 per_page = 24;
}

// Details for ssh/winrm access of the node.
message TargetConfig {
	// List of credential ids for a node.
	repeated string secrets = 20;
	// Node backend type (ssh, winrm, aws, ssm, azure, gcp).
	string backend = 22;
	// Node FQDN or IP address.
	string host = 23;
	// ssh or winrm connection port
	int32 port = 24;
	// Uses `sudo` (boolean).
	bool sudo = 26;
	// Check ssl (boolean).
	bool ssl = 27;
	// Allow self-signed certificate (boolean).
	bool self_signed = 28;
	// Username from the credential id for this node.
	string user = 29;
	// Sudo options to use when accessing the node.
	string sudo_options = 33;
	// List of hostnames (FQDN or IP address) for bulk creating nodes.
	repeated string hosts = 40;
}

// Node information.
message Node {
	// Unique node ID (UUID).
	string id = 1;
	// User-specified node name.
	string name = 2;
	// Node platform.
	string platform = 3;
	// Node platform version.
	string platform_version = 4;
	// Node manager (automate, aws-ec2, aws-api, azure-vm, azure-api, gcp).
	string manager = 5;
	// Node tags.
	repeated chef.automate.domain.compliance.api.common.Kv tags = 20;
	// End time from the most recent `detect` or `exec` job.
	google.protobuf.Timestamp last_contact = 21;
	// Node status (unreachable, reachable, unknown).
	string status = 22;
	// Results of the last compliance scan job for this node.
	ResultsRow last_job = 23;
	// Node configuration for ssh or winrm.
	TargetConfig target_config = 99;
	// List of manager ids for the node.
	repeated string manager_ids = 24;
	// Last connection error received when trying to contact the node.
	string connection_error = 25;
	// Last known node state (running, stopped, terminated).
	string state = 26;
	// Prefix for node name. The full node name is the prefix + the host.
	string name_prefix = 27;
	// List of projects associated with the node. Projects are a concept introduced in IAMv2.
	repeated string projects = 28;
	// Most recent node data from the last Chef Infra run results. 
	LastContactData run_data = 29;
	// Most recent compliance scan data for the node from the last InSpec scan. 
	LastContactData scan_data = 30;
}

// Most recent run or scan data for the node, taken from the most recent Infra run or InSpec scan executed on the node. 
message LastContactData {
	// Chef Infra run report id or InSpec scan report id.
	string id = 1;
	enum Status {
		UNKNOWN = 0;
		PASSED = 1;
		FAILED = 2;
		SKIPPED = 3;
	}
	// Last node report status.
	Status status = 2;
	// Next-to-last node status report.
	Status penultimate_status = 3;
	// Last node report endtime.
	google.protobuf.Timestamp end_time = 4;
}

message Nodes {
	// List of node objects.
	repeated Node nodes = 1;
	// Total number of nodes in the system.
	int32 total = 20;
	// Total number of unreachable nodes in the system.
	int32 total_unreachable = 21;
	// Total number of reachable nodes in the system.
	int32 total_reachable = 22;
	// Total number of unknown nodes in the system.
	int32 total_unknown = 23;
}

// Details from the most recent scan job that executed for the node.
message ResultsRow {
	// Node id for the result.
	string node_id = 1;
	// Report id for the result.
	string report_id = 2;
	// Status of the report.
	string status = 3;
	// Error message on failed attempts to reach a node.
	string result = 4;
	// Job id from the report.
	string job_id = 5;
	// Start time on the report.
	google.protobuf.Timestamp start_time = 20;
	// End time on the report.
	google.protobuf.Timestamp end_time = 21;
}

message BulkDeleteResponse {
	// List of deleted nodes, by name.
	repeated string names = 1;
}
